# Message-Assistant

./: .gitignore  app.py  data.db  db.py  direct_telegram_test.py  embed.py  ingest.py  main.py  mcp_server.py  mcp_server_v2.py  mock_frontend_with_cloudfare.js  pyproject.toml  sample.html  test_client.py  test_server.py  web_client.py
agents/: .env  Classifier.py  LLMchatbot.py  classifier_agent.py  email_agent.py  telegram_agent.py  telegram_session.py  test_classifier.py
client/: controller.py  menu.py  state.py  test_client.py
server/: getting_mail.py  send_emails.py  t_get_msgs.py
